Setting cursor to "none" doesn't hide it under Wayland
Steps to reproduce
- In gtk3-demo, select Cursors and press the blank button.
Current behavior
Nothing happens, the previously selected cursor remains used.
Expected outcome
The cursor disappears.
Version information
Current head of gtk-3-24
, or whatever is in org.gnome.Platform//master
, commit 7fd4b545c93a6d498e888cf2af2141bdf559b9ace09a04b6381f53a6d4cf037e
.
GTK 3.24.8 in Fedora (3.24.8-1.fc30.x86_64) and GTK in 3.32 platform work fine.
Edited by Alice Mikhaylenko